webroot/css/redesign.css
#demo-wrapper{
  margin: 0 auto;
  width: 100vw;
}

#outer {
  background-image: url("https://image.ibb.co/bucnbL/black-iphone.png");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

#demo-details {
  margin: 13vmin 4vmin;
}

#demo-text {
  font-family: "Monstserrat Regular", helvetica, sans-serif !important;
  margin: 6vmin 0;
  font-weight: bold;
  font-size: 2.1vmin;
  text-align: center;
}

#demo-adtype {
  font-family: "Bebas Neue", bebas, helvetica, sans-serif !important;
  font-size: 37px;
  margin: 13px 9px;
}

#dropdown-menu-button {
  background-color: transparent;
  color: black;
  border-radius: 0;
  border-color: #c5c5c5;
  border-width: 2px;
  line-height: 31px;
  text-align: left;
  padding: 7px;
  letter-spacing: 1px;
  width: 122px;
  font-size: 22px;
}

.dropdown-item {
  cursor: pointer;
}

.dropdown-item.active, .dropdown-item:active {
  color: white;
  background-color: #a5252d;
}

.demo-description {
  float: inline-start;
  text-align: justify;
}

#demo-iframe #outer {
  height: 79vmin;
  width: 38vmin;
  text-align: center;
  margin: 1vmin 0 0 10vmin;
}

#demo-iframe #outer .image {
  position: relative;
  width: 33vmin;
  min-width: 92%;
  height: 62vmin;
  top: 7vmin;
}




#demo-mobile-wrapper{
  min-height: 200vmin;
  width: 100vw;
}

#demo-mobile-details {
  margin: 0 auto;
}

#mobile-outer {
  background-image: url("https://image.ibb.co/bucnbL/black-iphone.png");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

#demo-mobile-wrapper #demo-text {
  font-size: 5.5vmin;
  margin: 11vmin 0;
}

#demo-mobile-adtype {
  font-family: "Bebas Neue", bebas, helvetica, sans-serif !important;
  font-size: 27px;
  margin: 13px 9px;
}

#demo-mobile-wrapper #demo-details {
  margin: 0 4vmin;
}

.demo-mobile-description {
  float: inline-start;
  text-align: justify;
  margin: 2vmin 0;
}

#demo-iframe #mobile-outer {
  height: 167vmin;
  width: 80vmin;
  margin: 2vmin 1.5vmin;
  position: absolute;
}

#demo-iframe #mobile-outer .image {
  position: relative;
  width: 74vmin;
  min-width: 92%;
  height: 135vmin;
  top: 14vmin;
  left: 3vmin;
}

.dropdown-mobile {
  float: left;
  padding-left: 6vw;
}

#dropdown-mobile-menu-button {
  background-color: transparent;
  color: black;
  border-radius: 0;
  border-color: #c5c5c5;
  border-width: 2px;
  font-size: 18px;
  line-height: 26px;
  width: 101px;
  text-align: left;
  padding: 6px;
  margin-right: 4vw;
  letter-spacing: 1px;
}





.gl-input-field {
  margin-bottom: 0.5rem;
  width: 85%;
  max-width: 100%;
  padding-left: 6px;
  font-size: 1rem;
}

#send-message {
  padding: 0.9em 0;
  width: 20%;
}

#send-message-mobile, #send-message {
  cursor: pointer;
}

.form-intro {
  font-family: "open sans", helvetica, sans-serif;
  font-size: 22px;
  margin: 0 0 34px 8px;
}

.gl-button-link-black{
  line-height: 17px;
  padding: 1rem !important;
  font-size: 24px;
}

